--- a/dosecal/index.html
+++ b/dosecal/index.html
@@ -372,7 +372,7 @@
             </section>
 
             <section id="dose-report" class="content-section illustration-section no-print">
-                <h2>Minh họa Báo cáo Liều (<span lang="en">Dose Report</span>) - Dạng Văn bản</h2>
+                <h2>Minh họa Báo cáo Liều - DOSE REPORT(<span lang="en">Dose Report</span>) </h2>
                 <div class="dose-report-text-container">
                   <div class="dose-report-header">
                       <div class="report-title-meta">
@@ -382,7 +382,7 @@
                               <span><strong>Tổng DLP:</strong> 738 mGy·cm</span>
                           </div>
                           <div class="general-info">
-                              <p>- Báo cáo liều được tạo sau khi kết thúc quá trình quét.</p>
+                              <p>- Báo cáo liều được tạo ở mỗi máy CT sau khi kết thúc quá trình quét, đây là yêu cầu bắt buộc đối với các máy CT trên thị trường hiện nay. Nó được thể hiện ở Series mang tên "Dose Report" trong danh sách các series đã chụp.</p>
                               <p>- Cung cấp thông tin về kV, mAs, $CTDI_{vol}$, $DLP$.</p>
                           </div>
                       </div>
