--- a/dosecal/index.html
+++ b/dosecal/index.html
@@ -372,7 +372,7 @@
             </section>
 
             <section id="dose-report" class="content-section illustration-section no-print">
-                <h2>Minh họa Báo cáo Liều - DOSE REPORT(<span lang="en">Dose Report</span>) </h2>
+                <h2>Minh họa Báo cáo Liều (<span lang="en">Dose Report trên máy CT</span>) </h2>
                 <div class="dose-report-text-container">
                   <div class="dose-report-header">
                       <div class="report-title-meta">
