--- a/dosecal/index.html
+++ b/dosecal/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Công cụ tính và Thông tin về Liều bức xạ CT</title>
+  <title>CT Dose Calculator</title>
 
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
@@ -280,7 +280,7 @@
   <div class="page-container">
 
       <nav class="side-nav no-print">
-          <h3>Điều hướng nhanh</h3>
+          <h3>CHỦ ĐỀ</h3>
           <ul>
               <li><a href="#calculator">Máy tính Liều</a></li>
               <li><a href="#dose-report">Minh họa Dose Report</a></li>
@@ -295,7 +295,7 @@
       <div class="main-content-area">
 
           <header class="main-header no-print">
-            <h1>Thông tin và Công cụ Tính toán Liều bức xạ <span lang="en">CT</span></h1>
+            <h1>Trang thông tin và Công cụ tính toán Liều bức xạ trong chụp Cắt lớp vi tính (CT Scan)<span lang="en">CT</span></h1>
             <p>Hướng dẫn, công cụ tính liều hiệu dụng từ $DLP$, và thông tin tham khảo về liều bức xạ trong X-quang và <span lang="en">CT</span>.</p>
           </header>
 
