--- a/dosecal/index.html
+++ b/dosecal/index.html
@@ -295,7 +295,7 @@
       <div class="main-content-area">
 
           <header class="main-header no-print">
-            <h1>Trang thông tin và Công cụ tính toán Liều bức xạ trong chụp Cắt lớp vi tính (CT Scan)<span lang="en">CT</span></h1>
+            <h1>Trang thông tin và Công cụ tính toán Liều bức xạ trong chụp Cắt lớp vi tính<span lang="en">CT Scan</span></h1>
             <p>Hướng dẫn, công cụ tính liều hiệu dụng từ $DLP$, và thông tin tham khảo về liều bức xạ trong X-quang và <span lang="en">CT</span>.</p>
           </header>
 
