--- a/dosecal/index.html
+++ b/dosecal/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Công cụ tính và Thông tin về Liều bức xạ CT</title>
+  <title>CT Dose</title>
 
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
@@ -304,7 +304,7 @@
   <div class="page-container">
 
       <nav class="side-nav no-print">
-          <h3>Điều hướng nhanh</h3>
+          <h3>DANH MỤC</h3>
           <ul>
               <li><a href="#calculator">Máy tính Liều</a></li>
               <li><a href="#dose-report">Minh họa Dose Report</a></li>
@@ -319,7 +319,7 @@
       <div class="main-content-area">
 
           <header class="main-header no-print">
-            <h1>Thông tin và Công cụ Tính toán Liều bức xạ <span lang="en">CT</span></h1>
+            <h1>Thông tin và Công cụ tính toán Liều bức xạ <span lang="en">CT</span></h1>
             <p>Hướng dẫn, công cụ tính liều hiệu dụng từ $DLP$, và thông tin tham khảo về liều bức xạ trong X-quang và <span lang="en">CT</span>.</p>
           </header>
 
@@ -329,7 +329,7 @@
               <p class="no-print">Ước tính Liều hiệu dụng ($E$, <span lang="en">Effective Dose</span>) dựa trên chỉ số $DLP$ (<span lang="en">Dose-Length Product</span>) và vùng cơ thể quét <span lang="en">CT</span>.</p>
 
               <div class="patient-info-group no-print">
-                  <h4>Thông tin bệnh nhân (Tùy chọn)</h4>
+                  <h4>Thông tin bệnh nhân (không bắt buộc)</h4>
                   <div class="form-group">
                       <div class="form-item">
                           <label for="patientName">Tên Bệnh nhân:</label>
