--- a/dosecal/index.html
+++ b/dosecal/index.html
@@ -465,7 +465,7 @@
 
           <footer class="main-footer no-print">
            <div>
-             <p>© <span id="copyright-year">2025</span> <strong>Cộng đồng Kỹ thuật viên hình ảnh y học Việt Nam</strong> – An toàn bức xạ trong y tế</span> liều thấp</p>
+             <p>© <span id="copyright-year">2025</span> <strong>Cộng đồng Kỹ thuật viên hình ảnh y học Việt Nam</strong> – Vì mục đích an toàn bức xạ trong y tế</span></p>
              <p>Biên soạn bởi nhóm <strong>KTV 3 Miền</strong> | Mục đích: Đào tạo & Tham khảo y khoa</p>
            <p><em>Tuyên bố miễn trừ trách nhiệm: Thông tin trên trang web này chỉ mang tính tham khảo, không thay thế cho chẩn đoán, chỉ định hoặc tư vấn y tế chuyên nghiệp từ bác sĩ hoặc chuyên gia y tế có trình độ.</em></p>
             <p>Chịu trách nhiệm nội dung và thiết kế:<strong>Lê Thanh Trọng - 0944406507</strong>
