--- a/dosecal/index.html
+++ b/dosecal/index.html
@@ -98,14 +98,59 @@
      #printButton { padding: 10px 20px; background-color: #17a2b8; color: white; border: none; font-size: 1em; border-radius: 6px; cursor: pointer; transition: background-color 0.2s ease; display: none; }
      #printButton:hover { background-color: #138496; }
 
-    /* Table Styles */
-    table { width: 100%; border-collapse: collapse; margin-top: 20px; border: 1px solid #ccc; }
-    th, td { padding: 12px 15px; text-align: left; border: 1px solid #ddd; }
-    th { background-color: #e9ecef; color: #495057; font-weight: 600; border-bottom: 2px solid #007BFF; }
-    tbody tr:nth-child(even) { background-color: #f8f9fa; }
-    tbody tr:hover { background-color: #e2e6ea; }
-    .k-factor-table th, .k-factor-table td, .dose-table th, .dose-table td { padding: 10px 12px; }
+     /* === CSS Updated for Table Styling === */
 
+        /* Base Table Styles (Apply generally, can be overridden) */
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+            border: 1px solid #ccc; /* Default border */
+        }
+        th, td {
+            padding: 12px 15px; /* Default padding */
+            text-align: left;
+            border: 1px solid #ddd; /* Default cell border */
+            vertical-align: middle;
+        }
+        tbody tr:hover {
+            background-color: #e9ecef; /* Default hover */
+        }
+
+        /* --- Styling for Dose Comparison Table --- */
+        .dose-table th {
+            background-color: var(--primary-color); /* Main blue background */
+            color: var(--table-header-text); /* White text */
+            font-weight: 600; /* Bold header text */
+            border-bottom: 2px solid var(--primary-color);
+            text-align: center;
+            padding: 10px 12px; /* Specific padding */
+            font-size: 1.0em; /* Slightly larger header font */
+        }
+        .dose-table tbody tr:nth-child(even) {
+            background-color: #e7f3ff; /* Light blue for even rows */
+        }
+        .dose-table tbody tr:nth-child(odd) {
+            background-color: var(--white); /* White for odd rows */
+        }
+        .dose-table tbody tr:hover {
+            background-color: #d1e7ff; /* Slightly darker blue hover */
+        }
+        .dose-table td {
+            padding: 10px 12px; /* Specific padding */
+            font-size: 0.95em; /* Slightly smaller font for data */
+        }
+         /* Center align dose and time equivalent columns */
+        .dose-table td:nth-child(2),
+        .dose-table td:nth-child(3) {
+            text-align: center;
+            font-family: var(--font-secondary); /* Use Roboto for numbers maybe */
+        }
+         /* Make first column slightly bolder if desired */
+         .dose-table td:first-child {
+             font-weight: 500; /* Medium weight for technique name */
+             text-align: left; /* Ensure left alignment */
+         }
     /* Source Citation Style */
     .source { font-size: 0.9em; color: #666; margin-top: 20px; text-align: right; }
     .source strong { font-weight: 600; }
