--- a/dosecal/index.html
+++ b/dosecal/index.html
@@ -238,11 +238,25 @@
          .report-table th, .report-table td {
              padding: 4px 6px; /* Reduce padding */
              font-size: 0.85em; /* Reduce font size */
+         /* === Hide Dose Report Section on Small Screens === */
+             #dose-report {
+                 display: none;
+             }
+             /* === End Hide Dose Report Section === */
+        }
+         @media (max-width: 480px) { /* Extra small screens */
+              body { font-size: 15px; }
+              .main-header h1 { font-size: 1.4em;}
+              .main-header p { font-size: 0.95em;}
+              h2 { font-size: 1.35em;}
+              h3 { font-size: 1.15em;}
+              .content-section { padding: 15px; }
+              .calculator-section .form-item { flex-basis: 100%; } /* Stack form items */
+              .formula-display { font-size: 1.0em; padding: 10px;}
+               .dose-table th, .dose-table td { font-size: 0.85em; padding: 6px 8px;}
+               .k-factor-table td { font-size: 0.85em; }
+               .report-table th, .report-table td { font-size: 0.8em; }
          }
-         .report-table {
-             min-width: 0; /* Allow table to shrink below 600px if needed */
-         }
-    }
 
     /* --- BEGIN: Print Styles --- */
     /* Hide the print container by default on screen */
