--- a/dosecal/index.html
+++ b/dosecal/index.html
@@ -455,7 +455,7 @@
             </section>
 
             <section id="dose-report" class="content-section illustration-section no-print">
-                <h2>Minh họa Báo cáo Liều (<span lang="en">Dose Report</span>) - Dạng Văn bản</h2>
+                <h2>Báo cáo Liều trên máy quét CT(<span lang="en">Dose Report</span>)/h2>
                 <div class="table-responsive-wrapper">
                     <div class="dose-report-text-container">
                       <div class="dose-report-header">
