--- a/mriprotocol/index.html
+++ b/mriprotocol/index.html
@@ -1,1 +1,240 @@
 
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tổng Hợp Protocol MRI Toàn Diện</title>
+    <style>
+        /* ----- Basic Layout Styles ----- */
+        html {
+            scroll-behavior: smooth;
+        }
+
+        body {
+            display: flex;
+            font-family: sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            background-color: #f0f8ff;
+            color: #333;
+        }
+
+        nav.sidebar {
+            width: 220px;
+            background-color: #e6f7ff;
+            border-right: 1px solid #b3e0ff;
+            padding: 20px 15px;
+            height: 100vh;
+            position: fixed;
+            top: 0;
+            left: 0;
+            overflow-y: auto;
+            z-index: 1000;
+        }
+
+        nav.sidebar h3 {
+            margin-top: 0;
+            color: #0056b3;
+            border-bottom: 1px solid #add8e6;
+            padding-bottom: 10px;
+        }
+
+        nav.sidebar ul { list-style: none; padding: 0; margin: 0; }
+        nav.sidebar ul li { margin-bottom: 5px; }
+        nav.sidebar ul li a { text-decoration: none; color: #0056b3; display: block; padding: 8px 10px; border-radius: 4px; transition: background-color 0.2s ease; }
+        nav.sidebar ul li a:hover, nav.sidebar ul li a.active { background-color: #cceaff; font-weight: bold; }
+        nav.sidebar ul ul { margin-left: 15px; margin-top: 5px; border-left: 2px solid #add8e6; padding-left: 10px; }
+        nav.sidebar ul ul li a { font-size: 0.9em; padding: 5px 10px; }
+
+        main.content {
+            margin-left: 250px;
+            padding: 20px 0px; /* Adjusted padding */
+            width: calc(100% - 250px);
+        }
+
+        /* ----- Header Section Styles ----- */
+        .page-header {
+            background-color: #004a9e; /* Dark blue like image */
+            color: white;
+            padding: 30px 30px; /* Adjusted padding */
+            text-align: center;
+            margin-bottom: 30px;
+            /* Removed negative margins, handled by main padding */
+        }
+
+        .page-header h2 {
+            margin: 0 0 10px 0;
+            font-size: 1.8em;
+            font-weight: bold;
+            text-transform: uppercase;
+            color: white;
+            border-bottom: none;
+        }
+
+        .page-header p {
+            margin: 0;
+            font-size: 1em;
+            opacity: 0.9;
+        }
+
+        /* ----- Original Content Styles (Applied to main.content) ----- */
+        main.content h1, main.content h2, main.content h3, main.content h4 {
+            color: #0056b3;
+            border-bottom: 1px solid #add8e6;
+            padding-bottom: 5px;
+            margin-top: 30px;
+        }
+
+         main.content h1 {
+             margin-top: 30px; /* Ensure space below header */
+             text-align: center;
+             border-bottom: 2px solid #0056b3;
+             /* Add padding if needed since main padding is removed */
+             padding-left: 30px;
+             padding-right: 30px;
+         }
+         main.content h2:first-of-type {
+             margin-top: 30px; /* Ensure first H2 also has space */
+         }
+
+
+        main.content table { width: 100%; border-collapse: collapse; margin-bottom: 20px; background-color: #fff; border: 1px solid #ddd; font-size: 0.95em; }
+        main.content th, main.content td { border: 1px solid #ddd; padding: 8px; text-align: left; vertical-align: top; }
+        main.content th { background-color: #e0efff; color: #003366; }
+        main.content ul, main.content ol { margin-left: 20px; padding-left: 15px; }
+        main.content > section ul li, main.content > section ol li { margin-bottom: 8px; }
+        main.content strong { color: #004080; }
+        main.content code { background-color: #eef; padding: 2px 4px; border-radius: 3px; font-family: monospace; }
+        main.content .citation { font-size: 0.8em; color: #555; vertical-align: super; margin-left: 2px; background-color: transparent; padding: 0; border-radius: 0; font-family: sans-serif; }
+
+        section[id] {
+            padding-top: 20px;
+            margin-top: -10px;
+            /* Add horizontal padding here */
+            padding-left: 30px;
+            padding-right: 30px;
+        }
+
+        /* Responsive */
+        @media (max-width: 768px) {
+            body { display: block; }
+            nav.sidebar { position: static; width: 100%; height: auto; border-right: none; border-bottom: 1px solid #b3e0ff; }
+            main.content { margin-left: 0; width: 100%; padding: 15px 0; }
+            main.content section { padding-left: 15px; padding-right: 15px; }
+            main.content h1 { padding-left: 15px; padding-right: 15px; }
+            .page-header { padding: 20px 15px; margin-bottom: 20px; border-radius: 0; }
+            .page-header h2 { font-size: 1.5em; }
+            .page-header p { font-size: 0.9em; }
+        }
+    </style>
+</head>
+<body>
+
+    <nav class="sidebar">
+        <h3>Danh Mục Protocols</h3>
+        <ul>
+            <li><a href="#gioi-thieu">Giới thiệu & Tổng quan</a></li>
+            <li><a href="#luu-y-chung">Lưu Ý Chung</a>
+                <ul>
+                    <li><a href="#an-toan-chuan-bi">An toàn & Chuẩn bị</a></li>
+                    <li><a href="#chuoi-xung-thong-so">Chuỗi xung & Thông số</a></li>
+                    <li><a href="#mat-phang-chup">Mặt phẳng chụp</a></li>
+                    <li><a href="#toi-uu-hoa">Tối ưu hóa & Kỹ thuật mới</a></li>
+                </ul>
+            </li>
+            <li><a href="#than-kinh">Thần Kinh</a>
+                 <ul>
+                    <li><a href="#nao">Não</a></li>
+                    <li><a href="#cot-song">Cột Sống</a></li>
+                 </ul>
+            </li>
+             <li><a href="#bung-chau">Bụng - Chậu</a>
+                 <ul>
+                    <li><a href="#bung">Bụng</a></li>
+                    <li><a href="#chau">Chậu</a></li>
+                 </ul>
+            </li>
+            <li><a href="#co-xuong-khop">Cơ Xương Khớp (MSK)</a>
+                 <ul>
+                    <li><a href="#nguyen-tac-chung-msk">Nguyên tắc chung</a></li>
+                    <li><a href="#chi-tren">Chi Trên (Vai...)</a></li>
+                    <li><a href="#chi-duoi">Chi Dưới (Háng, Gối...)</a></li>
+                    <li><a href="#khung-chau-msk">Khung chậu MSK</a></li>
+                     <li><a href="#nhiem-trung-u-msk">Nhiễm trùng/U MSK</a></li>
+                 </ul>
+            </li>
+            <li><a href="#vung-khac">Các Vùng Khác</a></li>
+            <li><a href="#tai-lieu-hoa">Tài liệu hóa & Triển khai</a></li>
+            <li><a href="#ket-luan">Kết luận & Xu hướng</a></li>
+        </ul>
+    </nav>
+
+    <main class="content">
+
+        <div class="page-header">
+            <h2>TRANG THÔNG TIN HƯỚNG DẪN PROTOCOL CHỤP CỘNG HƯỞNG TỪ (MRI)</h2>
+            <p>TỔNG HỢP KHUYẾN CÁO - ĐỊNH NGHĨA - THÔNG SỐ CHUẨN</p>
+        </div>
+        <h1>Tổng Hợp Các Protocol Chụp Cộng Hưởng Từ (MRI) Tiêu Chuẩn và Chuyên Sâu</h1>
+
+        <section id="gioi-thieu">
+             <h2>1. Giới thiệu</h2>
+             <p><strong>Vai trò không thể thiếu của MRI:</strong> Chụp cộng hưởng từ (MRI) là một kỹ thuật chẩn đoán hình ảnh không xâm lấn...</p>
+             <p><strong>Sự cần thiết của việc Tiêu chuẩn hóa...</strong></p>
+             <p><strong>Phạm vi và Mục đích của Báo cáo này:</strong>...</p>
+         </section>
+
+         <section id="luu-y-chung">
+             <h2>2. Các Lưu Ý Chung Khi Thực Hiện Protocol MRI</h2>
+             <section id="an-toan-chuan-bi">
+                 <h3>2.1. An Toàn, Chuẩn Bị và Sàng Lọc Bệnh Nhân:</h3>
+                 </section>
+             <section id="chuoi-xung-thong-so">
+                 <h3>2.2. Các Chuỗi Xung và Thông Số Cơ Bản:</h3>
+                 </section>
+              <section id="mat-phang-chup">
+                 <h3>2.3. Các Mặt Phẳng Chụp:</h3>
+                 </section>
+             <section id="toi-uu-hoa">
+                 <h3>2.4. Tối Ưu Hóa Protocol và Các Kỹ Thuật Tiên Tiến:</h3>
+                  </section>
+         </section>
+
+         <section id="ket-luan">
+             <h2>8. Kết luận</h2>
+             </section>
+        </main>
+
+    <script>
+        // (Keep the JavaScript from the previous response here)
+        const sections = document.querySelectorAll('main.content section[id]');
+        const navLinks = document.querySelectorAll('nav.sidebar ul li a');
+
+        function changeNav() {
+            let index = sections.length;
+            // Adjust offset slightly if needed due to header height
+            while(--index && window.scrollY + 80 < sections[index].offsetTop) {}
+
+            navLinks.forEach((link) => link.classList.remove('active'));
+            const activeSectionId = sections[index] ? sections[index].id : null;
+            if(activeSectionId){
+                const activeLink = document.querySelector(`nav.sidebar ul li a[href="#${activeSectionId}"]`);
+                if (activeLink) {
+                    activeLink.classList.add('active');
+                    // Expand parent menu if a child is active
+                    const parentUl = activeLink.closest('ul');
+                    const parentLi = parentUl ? parentUl.closest('li') : null;
+                    if (parentLi && parentLi.querySelector('a') !== activeLink) { // Check if it's a sub-item
+                        const parentLink = parentLi.querySelector('a');
+                        if(parentLink) parentLink.classList.add('active'); // Highlight parent too
+                    }
+                }
+            }
+        }
+        changeNav();
+        window.addEventListener('scroll', changeNav);
+    </script>
+
+</body>
+</html>
