--- a/mriprotocol/index.html
+++ b/mriprotocol/index.html
@@ -83,6 +83,38 @@
             width: calc(100% - 250px); /* Chiếm phần còn lại */
         }
 
+ /* ----- Header Section Styles ----- */
+        .page-header {
+            background-color: #004a9e; /* Dark blue like image */
+            color: white;
+            padding: 30px 30px; /* Adjusted padding */
+            text-align: center;
+            margin-bottom: 30px;
+            /* Removed negative margins, handled by main padding */
+        }
+
+        /* ----- CSS mới cho .page-header h2 (thay thế) ----- */
+.page-header h2 {
+    margin: 0 0 10px 0;
+    font-size: 1.8em;
+    /* font-weight: bold; */ /* Thay thế dòng này */
+    font-weight: 600;      /* Bằng dòng này (semi-bold) */
+    text-transform: uppercase;
+    color: white;
+    border-bottom: none;
+    text-shadow: none; /* Đảm bảo không có đổ bóng */
+    /* Gợi ý trình duyệt hiển thị font mượt mà, sắc nét hơn */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+        .page-header p {
+            margin: 0;
+            font-size: 1em;
+            opacity: 0.9;
+        }
+
+        
         /* ----- Original Content Styles (Applied to main.content) ----- */
         main.content h1, main.content h2, main.content h3, main.content h4 {
             color: #0056b3; /* Dark Blue headings */
